Fixed spacing

--- a/src/styles/Layout.css
+++ b/src/styles/Layout.css
@@ -73,7 +73,7 @@ p {
   padding: 60px 80px;
   border-radius: 16px;
   box-shadow: -8px -8px 30px 2px rgba(255, 255, 255, 0.3), 8px 8px 30px 2px rgba(0, 0, 0, 0.3);
-  max-width: 90%;
+  max-width: 80%;
   max-height: 80%;
 }
 
